xong tuyển sinh

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="section-three-menu">
                 <a class="section-three-menu_item" href="#">TIN TỨC</a>
-                <a class="section-three-menu_item" href="#">TUYẾN SINH</a>
+                <a class="section-three-menu_item" href="#">TUYỂN SINH</a>
                 <a class="section-three-menu_item" href="#">ĐÀO TẠO</a>
                 <a class="section-three-menu_item" href="#">HỢP TÁC</a>
                 <a class="section-three-menu_item" href="#">SINH VIÊN</a>
@@ -163,6 +163,55 @@
                 </ul>
                 <div class="news-links_more">
                     <a href="#">Xem thêm...</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-six">
+        <div class="container">
+            <div class="admissions-title">
+                <h1 class="admissions-title_item">TUYỂN SINH</h1>
+            </div>
+            <div class="admissions-content">
+                <div class="admissions-content_main">
+                    <div class="admissions-content_main_img">
+                        <img src="./image/tuyensinh1.png" alt="tuyensinh1">
+                    </div>
+                    <div class="admissions-content_main_title">
+                        <a href="#"><h2>XÉT HỌC BẠ: Vào đại học sớm thay vì chờ nguyện vọng bổ sung</h2></a>
+                    </div>
+                    <div class="admissions-content_main_date">
+                        <p>04/10/2021 16:30 pm</p>
+                    </div>
+                    <div class="admissions-content_main_content">
+                        <p>Năm nay điểm chuẩn của các trường năm nay tăng mạnh và theo quy định của bộ GD&ĐT các năm trước, điểm chuẩn xét tuyển nguyện vọng bổ sung sẽ bằng hoặc cao hơn điểm chuẩn đợt 1. Điều này có thể khiến cho nhiều thí sinh có điểm thi cao nhưng vẫn không may mắn trúng tuyển đúng ngành, đúng trường yêu thích ....</p>
+                    </div>
+                </div>
+                <div class="admissions-content_sub">
+                    <div class="admissions-content_sub_item">
+                        <div class="admissions-content_sub_item_img">
+                            <img src="./image/tuyensinh2.png" alt="">
+                        </div>
+                        <div class="admissions-content_sub_item_title">
+                            <a href="#"><h2>Điểm trúng tuyển vào Phân hiệu Đại học Đà Nẵng tại Kon Tum theo phương thức xét điểm thi THPT 2021</h2></a>
+                        </div>
+                    </div>
+                    <div class="admissions-content_sub_item">
+                        <div class="admissions-content_sub_item_img">
+                            <img src="./image/tuyensinh3.png" alt="">
+                        </div>
+                        <div class="admissions-content_sub_item_title">
+                           <a href="#"> <h2>Đại học Đà Nẵng công bố điểm nhận đăng ký xét tuyển theo kết quả thi THPT năm 2021</h2></a>
+                        </div>
+                    </div>
+                    <div class="admissions-content_sub_item">
+                        <div class="admissions-content_sub_item_img">
+                            <img src="./image/tuyensinh4.png" alt="">
+                        </div>
+                        <div class="admissions-content_sub_item_title">
+                            <a href="#"><h2>Tuyển sinh Đại học chính quy theo hình thức xét học bạ THPT năm 2021 đợt bổ sung từ 1/9/2021-17/9/2021</h2></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
