--- a/index.html
+++ b/index.html
@@ -216,5 +216,20 @@
             </div>
         </div>
     </section>
+    <section class="section-7">
+        <div class="container">
+            <div class="section-main">
+                <div class="section-title">
+                    <h1>CÁC NGÀNH ĐÀO TẠO</h1>
+                </div>
+                <div class="section-slide">
+                    <img src="./image/slide-daotao1.png" alt="">
+                </div>
+            </div>
+            <div class="btn-admission">
+                <a href="#" class="btn-admission_more">XEM THÊM CỔNG TUYỂN SINH UDCK</a>
+            </div>
+        </div>
+    </section>
   </body>
 </html>
