--- a/index.html
+++ b/index.html
@@ -421,5 +421,53 @@
         </div>
       </div>
     </section>
+    <section class="section-11">
+      <div class="container">
+        <div class="partner-main">
+          <div class="partner-main_title">
+            <h1 class="partner-title_item">ĐỐI TÁC</h1>
+          </div>
+          <div class="partner-main_content">
+            <a href="#"><img src="./image/doitac1.png" alt=""></a>
+            <a href="#"><img src="./image/doitac2.png" alt=""></a>
+            <a href="#"><img src="./image/doitac3.png" alt=""></a>
+            <a href="#"><img src="./image/doitac4.png" alt=""></a>
+            <a href="#"><img src="./image/doitac5.png" alt=""></a>
+            <a href="#"><img src="./image/doitac6.png" alt=""></a>
+            <a href="#"><img src="./image/doitac7.png" alt=""></a>
+            <a href="#"><img src="./image/doitac8.png" alt=""></a>
+            <a href="#"><img src="./image/doitac9.png" alt=""></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-12">
+     
+        <div class="discover-main">
+          <h1>KHÁM PHÁ UDCK</h1>
+         <a href="#"> <h2>ELEARNING | KHOA HỌC CÔNG NGHỆ | THƯ VIỆN | KHỞI NGHIỆP | TUYỂN DỤNG</h2></a>
+        </div>
+      
+    </section>
+    <section class="footer">
+      <div class="container">
+        <div class="footer-main">
+          <div class="footer-main_left">
+            <a href="#"><img src="./image/logo.png" alt="logo"></a>
+            <p>Địa chỉ: 704 Phan Đình Phùng, TP.Kon Tum</p>
+            <p>Điện thoại: (84) 02603919997 - 02603913029 - 02603919388 </p>
+            <p>Fax: (84) 02603 913 029</p>
+            <p>Email: udck@kontum.udn.vn</p>
+            <p><a href="#">https://www.facebook.com/kontum.udn.vn</a></p>
+          </div>
+          <div class="footer-main_right">
+            <a href="#">Tư vấn chọn ngành</a>
+            <a href="#">Chương trình học bổng</a>
+            <a href="#">Thủ tục nhập học</a>
+            <a href="#">Hỗ trợ ký túc xá</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
