--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <div class="section-two-content">
           <div class="section-two-content_image">
             <img src="./image/sumenh.png" alt="sứ mệnh" />
+            <div class="overlay"><h2> SỨ MỆNH</h2></div>
           </div>
           <div class="section-two-content_text">
             <h3>Sứ mệnh</h3>
@@ -83,6 +84,7 @@
           </div>
           <div class="section-two-content_image">
             <img src="./image/tamnhin.png" alt="sứ mệnh" />
+            <div class="overlay"><h2> TẦM NHÌN </h2></div>
           </div>
         </div>
       </div>
@@ -98,7 +100,15 @@
           <a class="section-three-menu_item" href="#">SINH VIÊN</a>
         </div>
         <div class="section-three-slide">
-          <img src="./image/slide1.png" alt="" />
+          <div class="mySlides fade">
+            <img src="./image/slide1.png" style="width:100%"/>
+          </div>
+          <div class="mySlides fade">
+            <img src="./image/slide-daotao1.png" style="width:100%; height:600px;"/>
+          </div>
+          
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
       </div>
     </section>
