--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
               <p>
                 Sau 1 tuần học tập, Tân sinh viên Khóa K21 đã hoàn thành tuần
                 sinh hoạt công dân dành cho sinh viên đầu khóa với rất nhiều nội
-                dung quan trọng, thiết thực và ý nghĩa để các bạn chuẩn bị tốt
-                nhất cả về tinh thần và kiến thức ..
+                dung quan trọng ...
               </p>
             </div>
             <div class="news-main_item_more">
