--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <img src="./image/slide1.png" style="width:100%"/>
           </div>
           <div class="mySlides fade">
-            <img src="./image/slide-daotao1.png" style="width:100%; height:600px;"/>
+            <img src="./image/slide-daotao1.png" style="width:100%"/>
           </div>
           
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
