--- a/index.html
+++ b/index.html
@@ -329,7 +329,15 @@
           </div>
           <!-- slide show -->
           <div class="section-slide">
-            <img src="./image/slide-daotao1.png" alt="" />
+            <div class="mySlides2 fade2">
+              <img src="./image/slide-daotao1.png" alt="" />
+            </div>
+            <div class="mySlides2 fade2">
+              <img src="./image/slide1.png" alt="" />
+            </div>
+
+            <a class="prev2" onclick="plusSlides2(-1)">&#10094;</a>
+            <a class="next2" onclick="plusSlides2(1)">&#10095;</a>
           </div>
         </div>
         <div class="btn-admission">
