--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="container">
         <div class="header-content">
           <div class="header-content_title">
-            <h1>PHÂN HIỆU
+            <h1>PHÂN HIỆU <br>
               ĐẠI HỌC ĐÀ NẴNG
               TẠI KON TUM
               </h1>
@@ -108,7 +108,10 @@
             <img src="./image/slide1.png" style="width:100%"/>
           </div>
           <div class="mySlides fade">
-            <img src="./image/slide-daotao1.png" style="width:100%"/>
+            <img src="./image/slide1.1.jpg" style="width:100%"/>
+          </div>
+          <div class="mySlides fade">
+            <img src="./image/slide1.2.jpg" style="width:100%"/>
           </div>
           
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -333,7 +336,10 @@
               <img src="./image/slide-daotao1.png" alt="" />
             </div>
             <div class="mySlides2 fade2">
-              <img src="./image/slide1.png" alt="" />
+              <img src="./image/slide2.2.jpg" alt="" />
+            </div>
+            <div class="mySlides2 fade2">
+              <img src="./image/slide2.3.jpg" alt="" />
             </div>
 
             <a class="prev2" onclick="plusSlides2(-1)">&#10094;</a>
