--- a/index.html
+++ b/index.html
@@ -477,7 +477,13 @@
      
         <div class="discover-main">
           <h1>KHÁM PHÁ UDCK</h1>
-         <a href="#"> <h2>ELEARNING | KHOA HỌC CÔNG NGHỆ | THƯ VIỆN | KHỞI NGHIỆP | TUYỂN DỤNG</h2></a>
+          <div class="discover-main_item">
+            <a href="#"><h2>ELEARNING</h2></a>
+            <a href="#"><h2>KHOA HỌC CÔNG NGHỆ</h2></a>
+            <a href="#"><h2>THƯ VIỆN</h2></a>
+            <a href="#"><h2>KHỞI NGHIỆP</h2></a>
+            <a href="#"><h2>TUYỂN DỤNG</h2></a>
+          </div>
         </div>
       
     </section>
